--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,27 +1,30 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:background="@color/azul"
+    tools:context=".Login">
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
+        android:src="@drawable/ic_launcher"/>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="#1f009700">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:layout_weight="2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/login_user"
             android:id="@+id/textView"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="#ff007000" />
+            android:textColor="@color/blanco" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -35,12 +38,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/login_pass"
             android:id="@+id/textView2"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:textColor="#ff007000" />
+            android:textColor="@color/blanco" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -56,13 +58,12 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_login"
             android:id="@+id/btnLogin"
-            android:layout_gravity="center_horizontal"
             android:onClick="login"
-            android:textColor="#ff007000"
+            android:textColor="@color/blanco"
             android:textColorHighlight="#5b0057b5"
             android:background="#5d0057b5"
-            android:elegantTextHeight="false"
             android:ellipsize="marquee"
             android:enabled="true" />
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
