--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <c
+    <color name="azul">#6e8ec8</color>
+    <color name="blanco">#fff</color>
+    <color name="fondo">#F2F2F2</color>
+
 </resources>
