Alguno cambios de interfaz :)
Hice el xml del perfil de usuario y de los comentarios, acomode un xml
para las preguntas de agregar una oferta, queda pendiente conectar cosas
a la bd.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="blanco">#fff</color>
     <color name="fondo">#F2F2F2</color>
 
+    <color name="hint">#a9a7a6</color>
+    <color name="escritura">#5e5c5c</color>
+    <color name="preguntas">#4c4c4c</color>
+
 </resources>
