--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,14 @@
         android:layout_weight="2">
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_user"
+            android:textSize="20dp"
+            android:textColor="@color/blanco"
+            android:layout_marginBottom="10dp"/>
+
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,13 +37,20 @@
             android:ems="10"
             android:id="@+id/txtUsuario"
             android:background="#fff"
-            android:text="@string/login_user"/>
+            />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_pass"
+            android:textSize="20dp"
+            android:textColor="@color/blanco"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:padding="5dp"
             android:inputType="textPassword"
             android:ems="10"
@@ -47,10 +62,11 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_login"
             android:layout_marginTop="30dp"
+            android:textSize="20dp"
             android:id="@+id/btnLogin"
+            android:textAllCaps="false"
             android:onClick="login"
-            android:textColor="@color/blanco"
-            android:background="#853674"
+            android:textColor="@color/preguntas"
             android:ellipsize="marquee"
             android:enabled="true" />
     </LinearLayout>
