--- a/app/src/main/res/layout/perfil_usuario.xml
+++ b/app/src/main/res/layout/perfil_usuario.xml
@@ -15,6 +15,12 @@
             android:layout_height="fill_parent"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/foto_usuario"
+                android:src="@drawable/user_img"/>
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
